<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50sp"
        >
        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign Up"
            android:textSize="30dp"
            android:textColor="@color/colorConcept"
            app:layout_constraintTop_toTopOf="parent"
            />




        <LinearLayout
            android:id="@+id/signup_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/signup_title"
            android:layout_marginTop="60dp"
            android:singleLine="true"
            >

            <EditText
                android:id="@+id/et_signup_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/style_corner_line"
                android:backgroundTint="@color/colorConcept"
                android:drawableLeft="@drawable/login_id"
                android:drawablePadding="10dp"
                android:hint="아이디"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_duplicate_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorConcept"
                android:textColor="@color/colorWhite"
                android:text="중복확인"
                android:textSize="20sp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_signup_id_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_view_id"
            android:textColor="@color/colorRed"
            android:text="@string/id_insert"
            android:padding="10dp"
            />


        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_password"
            android:inputType="textPassword"
            android:hint="비밀번호"
            android:background="@drawable/style_corner_line"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/colorConcept"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_id_hint"
            android:singleLine="true"
            android:maxLength="20"
            />
        <TextView
            android:id="@+id/tv_signup_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_password"
            android:text="@string/pwd_insert"
            android:gravity="center_vertical"
            android:textColor="@color/colorRed"
            android:drawablePadding="5dp"
            android:padding="10dp"
            />


        <EditText
            android:id="@+id/et_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_password"
            android:inputType="textPassword"
            android:hint="비밀번호 확인"
            android:background="@drawable/style_corner_line"
            android:padding="10dp"
            android:singleLine="true"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/colorConcept"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_password_hint"
            android:maxLength="20"
            />

        <TextView
            android:id="@+id/tv_signup_password_check_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_signup_confirm_password"
            android:text="@string/pwd_miss_match"
            android:gravity="center_vertical"
            android:textColor="@color/colorRed"
            android:padding="10dp"
            />

        <LinearLayout
            android:id="@+id/lo_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_password_check_hint"

            >

            <EditText
                android:id="@+id/et_signup_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_corner_line"
                android:backgroundTint="@color/colorConcept"
                android:maxLength="10"
                android:hint="닉네임"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_signup_nick_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nick_name_insert"
                android:gravity="center_vertical"
                android:textColor="@color/colorRed"
                android:padding="10dp"
                />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/signup_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lo_signup_name"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/et_signup_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/style_corner_line"
                android:backgroundTint="@color/colorConcept"
                android:drawablePadding="10dp"
                android:hint="이메일"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:padding="10dp"
                android:maxLength="30"
                />

            <Button
                android:id="@+id/btn_signup_send_auth_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorConcept"
                android:layout_weight="2"
                android:ems="4"
                android:maxEms="4"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:text="인증번호 발송"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_signup_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_insert"
            android:gravity="center_vertical"
            android:textColor="@color/colorRed"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/signup_view_email"
            />

        <LinearLayout
            android:id="@+id/ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/style_corner_line"
            android:backgroundTint="@color/colorConcept"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_email_hint"
            >

        <EditText
            android:id="@+id/et_signup_email_auth_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="인증 번호"
            android:padding="10dp"
            android:backgroundTint="@color/colorTransparent"
            android:layout_weight="2"
            android:maxLines="1"
            android:maxLength="4"
            android:inputType="number"
            />
            <TextView
                android:id="@+id/tv_signup_auth_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="3:00"
                android:textSize="10dp"
                android:padding="10dp"
                android:singleLine="true"
                />

            <Button
                android:id="@+id/btn_check_signup_auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorConcept"
                android:layout_weight="2"
                android:textColor="@color/colorWhite"
                android:text="인증번호 확인"
                />


    </LinearLayout>
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorConcept"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/ly"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="가 입"
            android:textSize="30sp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>